--- a/Conceitos/Códigos - Atualização de um banco de dados com Python, Pandas e SQL .ipynb
+++ b/Conceitos/Códigos - Atualização de um banco de dados com Python, Pandas e SQL .ipynb
@@ -444,7 +444,7 @@
    "id": "cb0b8fc5",
    "metadata": {},
    "source": [
-    "<img width=\"50%\" src=\"Banco de Dados TEST_DB as ações do Yahoo Finance.png\">"
+    "<img width=\"50%\" src=\"_imagens\\Banco de Dados TEST_DB as ações do Yahoo Finance.png\">"
    ]
   }
  ],
